# intelligent-customer-service-agent

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/admin-web/: README.md
apps/agent-console/: README.md
apps/chat-widget/: README.md
data/: customer_service.db
deploy/prometheus/: prometheus.yml  rules.yml
docs/: architecture.md
docs/项目交付文档/: 00_文档控制与交付说明.md  01_需求分析说明书.md  02_总体架构设计说明书.md  03_API接口文档.md  04_数据库设计说明书.md  05_角色权限矩阵.md  06_测试计划与测试用例.md  07_部署实施方案.md  08_生产部署拓扑与备份恢复方案.md  109_运维安全方案.md  10_项目总结与移交说明.md
evaluation/datasets/: ecommerce_qa_v1.jsonl
evaluation/fixtures/: knowledge_baseline.json
evaluation/reports/: dataset_quality.md  evaluation_latest.json  evaluation_latest.md  load_test_latest.json  load_test_latest.md
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial_schema.py  0002_knowledge_embeddings.py  0003_pgvector_hnsw.py
scripts/: generate_evaluation_dataset.py  load_test.py  run_evaluation.py  validate_evaluation_dataset.py  verify_deployment.py
tests/: conftest.py  test_answer_pipeline.py  test_auth_audit.py  test_commerce.py  test_customer_profiles.py  test_customer_service_features.py  test_embedding_gateway.py  test_health.py  test_hybrid_retrieval.py  test_migrations.py  test_model_gateway.py  test_oms_gateway.py  test_persistence.py  test_pgvector_store.py  test_redis_infrastructure.py  test_rerank_gateway.py  test_safety_policy.py
(+67 files in other folders)
