[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-ai-customer-service"
version = "0.1.0"
description = "Modular enterprise AI customer service platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<4.0",
    "PyJWT>=2.10,<3.0",
    "pwdlib[argon2]>=0.2,<1.0",
    "email-validator>=2.2,<3.0",
    "alembic>=1.18,<2.0",
    "redis>=6.4,<9.0",
    "prometheus-client>=0.22,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"customer_service.web" = ["*.html", "*.css", "*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
